...
      showMessage('Please enter your email first');
      setSnackbarVisible(true);
      return;
    }
    try {
      await auth.sendPasswordResetEmail(email);
      showMessage('A password reset email has been sent');
      setSnackbarVisible(true);
    } catch (error: any) {
      showMessage(error.message);
      setSnackbarVisible(true);
    }
  };
...
            onChangeText={setPassword}
            secureTextEntry
            // style={loginStyles.textInput}
          />

          <TouchableOpacity onPress={handleForgotPassword}>
            <Text style={loginStyles.forgotPassword}>Forgot password?</Text>
          </TouchableOpacity>

          {loading ? (
            <ActivityIndicator animating size="large" color="#007A8C"/>
          ) : (
            <Button testID="login" mode="contained" onPress={handleLogIn} style={loginStyles.signInButton}>
...
